Fix hero borders on small screens

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -93,14 +93,14 @@ header {
 
 .hero {
     margin: 30px 0;
-    padding: 30px;
+    padding: 2vw;
     background-color: $white;
     max-width: 600px;
     transform: rotate(-2deg);
     box-shadow: -3px 5px 10px $black;
 
     img {
-        margin-bottom: 30px;
+        margin-bottom: 2vw;
     }
 
     h4 {
